--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
         <div class="mobile-nav-bg"></div>
       </nav>
       <div class="hero-content-wrapper">
+        <img class="logo-bg" src="./images/Logo.svg" />
         <div class="name-wrapper">
-          <h1>Mitch Malinin</h1>
-          <h3>Frontend Developer</h3>
+          <h1 class="name">Mitch Malinin</h1>
+          <h3 class="title">Frontend Developer</h3>
         </div>
         <div class="social-wrapper">
           <img class="social-icon" src="./images/Github_white.svg" />
@@ -39,7 +40,9 @@
       <img class="circle-sm" src="./images/circle.svg" />
       <img class="circle-sm" src="./images/circle.svg" />
       <img class="triangle-sm" src="./images/triangle.svg" />
-      <img class="dots-bg" src="./images/dots.svg" />
+      <img class="dots-left" src="./images/dots.svg" />
+      <img class="dots-right" src="./images/dots.svg" />
+      <img class="square-sm" src="./images/square.svg" />
       <img class="square-bg" src="./images/square.svg" />
     </section>
     <script src="script.js"></script>
