--- a/index.html
+++ b/index.html
@@ -8,43 +8,62 @@
     <title>Mitchell Malinin</title>
   </head>
   <body>
-    <section class="hero">
-      <nav class="nav-wrapper">
-        <img class="logo" src="./images/Logo.svg" />
-        <div class="burger" onclick="toggleBurger()">
-          <div class="bar" id="bar1"></div>
-          <div class="bar" id="bar2"></div>
-          <div class="bar" id="bar3"></div>
+    <div class="wrapper">
+      <section class="hero">
+        <nav class="nav-wrapper">
+          <img class="logo" src="./images/Logo.svg" />
+          <div class="burger" onclick="toggleBurger()">
+            <div class="bar" id="bar1"></div>
+            <div class="bar" id="bar2"></div>
+            <div class="bar" id="bar3"></div>
+          </div>
+          <ul class="nav">
+            <li class="nav-item">About</li>
+            <li class="nav-item">Projects</li>
+            <li class="nav-item">Contact</li>
+            <li class="nav-item">Resume</li>
+          </ul>
+          <div class="mobile-nav-bg"></div>
+        </nav>
+        <div class="hero-content-wrapper">
+          <img class="logo-bg" src="./images/Logo.svg" />
+          <div class="name-wrapper">
+            <h1 class="name">Mitch Malinin</h1>
+            <h3 class="title">Frontend Developer</h3>
+          </div>
+          <div class="social-wrapper">
+            <img class="social-icon" src="./images/Github_white.svg" />
+            <img class="social-icon" src="./images/LinkedIN_white.svg" />
+            <img class="social-icon" src="./images/Twitter_white.svg" />
+          </div>
         </div>
-        <ul class="nav">
-          <li class="nav-item">About</li>
-          <li class="nav-item">Projects</li>
-          <li class="nav-item">Contact</li>
-          <li class="nav-item">Resume</li>
-        </ul>
-        <div class="mobile-nav-bg"></div>
-      </nav>
-      <div class="hero-content-wrapper">
-        <img class="logo-bg" src="./images/Logo.svg" />
-        <div class="name-wrapper">
-          <h1 class="name">Mitch Malinin</h1>
-          <h3 class="title">Frontend Developer</h3>
+        <img class="circle-bg" src="./images/circle.svg" />
+        <img class="circle-sm" src="./images/circle.svg" />
+        <img class="circle-sm" src="./images/circle.svg" />
+        <img class="triangle-sm" src="./images/triangle.svg" />
+        <img class="dots-left" src="./images/dots.svg" />
+        <img class="dots-right" src="./images/dots.svg" />
+        <img class="square-sm" src="./images/square.svg" />
+        <img class="square-bg" src="./images/square.svg" />
+      </section>
+      <section class="about">
+        <div class="about-heading">
+          <h1>About</h1>
+          <h6>Myself</h6>
         </div>
-        <div class="social-wrapper">
-          <img class="social-icon" src="./images/Github_white.svg" />
-          <img class="social-icon" src="./images/LinkedIN_white.svg" />
-          <img class="social-icon" src="./images/Twitter_white.svg" />
+
+        <div class="about-content">
+          <p class="text">
+            My name is Mitch Malinin, and I am a web development bootcamp
+            graduate. I have strong interests in building complex user
+            interfaces, and learning about blockchain technology. I also posses
+            a passion to develop innovative applications that will shape the
+            future of society!
+          </p>
+          <img class="circle" src="./images/avatar.svg" />
         </div>
-      </div>
-      <img class="circle-bg" src="./images/circle.svg" />
-      <img class="circle-sm" src="./images/circle.svg" />
-      <img class="circle-sm" src="./images/circle.svg" />
-      <img class="triangle-sm" src="./images/triangle.svg" />
-      <img class="dots-left" src="./images/dots.svg" />
-      <img class="dots-right" src="./images/dots.svg" />
-      <img class="square-sm" src="./images/square.svg" />
-      <img class="square-bg" src="./images/square.svg" />
-    </section>
-    <script src="script.js"></script>
+      </section>
+      <script src="script.js"></script>
+    </div>
   </body>
 </html>
