--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="shortcut icon" type="image/jpg" href="./images/Logo.svg" />
     <title>Mitchell Malinin</title>
   </head>
   <body>
@@ -46,13 +47,12 @@
         <img class="square-sm" src="./images/square.svg" />
         <img class="square-bg" src="./images/square.svg" />
       </section>
-      <section class="about">
-        <div class="about-heading">
+      <section class="section-spacing about">
+        <div class="section-heading">
           <h1>About</h1>
           <h6>Myself</h6>
         </div>
-
-        <div class="about-content">
+        <div class="about-content section-content">
           <p class="text">
             My name is Mitch Malinin, and I am a web development bootcamp
             graduate. I have strong interests in building complex user
@@ -60,7 +60,77 @@
             a passion to develop innovative applications that will shape the
             future of society!
           </p>
-          <img class="circle" src="./images/avatar.svg" />
+          <img class="circle" src="./images/avatar.svg" alt="avatar" />
+        </div>
+      </section>
+      <section class="section-spacing skills">
+        <img class="skills-dots" src="./images/dots.svg" />
+        <img class="skills-dots" src="./images/dots.svg" />
+        <div class="section-heading">
+          <h1>My</h1>
+          <h6 class="skills-title">Skills</h6>
+        </div>
+        <div class="skills-content section-content">
+          <div class="skill-card">
+            <h5>React</h5>
+            <div class="skill-card-icon-container React">
+              <img src="./images/skills/react.svg" alt="skills-img" />
+            </div>
+          </div>
+          <div class="skill-card">
+            <h5>JavaScript</h5>
+            <div class="skill-card-icon-container JavaScript">
+              <img src="./images/skills/js.svg" alt="skills-img" />
+            </div>
+          </div>
+          <div class="skill-card">
+            <h5>Node.js</h5>
+            <div class="skill-card-icon-container Node">
+              <img src="./images/skills/node.svg" alt="skills-img" />
+            </div>
+          </div>
+          <div class="skill-card">
+            <h5>MongoDB</h5>
+            <div class="skill-card-icon-container MongoDB">
+              <img src="./images/skills/mongo.svg" alt="skills-img" />
+            </div>
+          </div>
+          <div class="skill-card">
+            <h5>HTML</h5>
+            <div class="skill-card-icon-container html">
+              <img
+                class="smaller-img"
+                src="./images/skills/html.svg"
+                alt="skills-img"
+              />
+            </div>
+          </div>
+          <div class="skill-card">
+            <h5>CSS</h5>
+            <div class="skill-card-icon-container">
+              <img
+                class="smaller-img"
+                src="./images/skills/css.svg"
+                alt="skills-img"
+              />
+            </div>
+          </div>
+          <div class="skill-card">
+            <h5>Figma</h5>
+            <div class="skill-card-icon-container">
+              <img
+                class="figma-img"
+                src="./images/skills/figma.svg"
+                alt="skills-img"
+              />
+            </div>
+          </div>
+          <div class="skill-card">
+            <h5>Coffee Drinking</h5>
+            <div class="skill-card-icon-container">
+              <img src="./images/skills/coffee.svg" alt="skills-img" />
+            </div>
+          </div>
         </div>
       </section>
       <script src="script.js"></script>
