--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
             <div class="bar" id="bar3"></div>
           </div>
           <ul class="nav">
-            <li class="nav-item">About</li>
-            <li class="nav-item">Projects</li>
-            <li class="nav-item">Contact</li>
-            <li class="nav-item">Resume</li>
+            <a href="#about"><li class="nav-item">About</li></a>
+            <a href="#projects"><li class="nav-item">Projects</li></a>
+            <a href="#contact"><li class="nav-item">Contact</li></a>
+            <a
+              href="https://drive.google.com/file/d/1uG2A76dIdHxJlchTDTEm6mpR1zXJFtsM/view?usp=sharing"
+              target="_blank"
+              ><li class="nav-item">Resume</li></a
+            >
           </ul>
           <div class="mobile-nav-bg"></div>
         </nav>
@@ -33,9 +37,15 @@
             <h3 class="title">Frontend Developer</h3>
           </div>
           <div class="social-wrapper">
-            <img class="social-icon" src="./images/Github_white.svg" />
-            <img class="social-icon" src="./images/LinkedIN_white.svg" />
-            <img class="social-icon" src="./images/Twitter_white.svg" />
+            <a href="https://github.com/mitchmalinin" target="_blank"
+              ><img class="social-icon" src="./images/Github_white.svg"
+            /></a>
+            <a href="https://www.linkedin.com/in/mitchmalinin/" target="_blank"
+              ><img class="social-icon" src="./images/LinkedIN_white.svg"
+            /></a>
+            <a href="https://twitter.com/mitchmalinin" target="_blank"
+              ><img class="social-icon" src="./images/Twitter_white.svg"
+            /></a>
           </div>
         </div>
         <img class="circle-bg" src="./images/circle.svg" />
@@ -47,7 +57,7 @@
         <img class="square-sm" src="./images/square.svg" />
         <img class="square-bg" src="./images/square.svg" />
       </section>
-      <section class="section-spacing about">
+      <section id="about" class="section-spacing about">
         <div class="section-heading">
           <h1>About</h1>
           <h6>Myself</h6>
@@ -134,7 +144,7 @@
         </div>
       </section>
 
-      <section class="section-spacing">
+      <section id="projects" class="section-spacing">
         <div class="section-heading">
           <h1>My</h1>
           <h6>Projects</h6>
@@ -317,6 +327,44 @@
           </div>
         </div>
       </section>
+      <footer id="contact">
+        <div class="section-heading">
+          <h1>Contact</h1>
+          <h6>me</h6>
+        </div>
+
+        <div class="footer-content">
+          <div class="link-wrapper">
+           
+            <div class="link">
+              <img class="social-icon" src="./images/Gmail_white.svg" />
+              <span>mitchmalinin@gmail.com</span>
+            </div>
+            <a href="https://www.linkedin.com/in/mitchmalinin/" target="_blank">
+            <div class="link">
+              <img class="social-icon" src="./images/LinkedIN_white.svg" />
+              <span>linkedin.com/in/mitchmalinin/</span>
+            </div>
+            </a>
+            <a href="https://github.com/mitchmalinin" target="_blank">
+            <div class="link">
+              <img class="social-icon" src="./images/Github_white.svg" />
+              <span>github.com/mitchmalinin</span>
+            </div>
+            </a>
+            <a href="https://twitter.com/mitchmalinin" target="_blank">
+            <div class="link">
+              <img class="social-icon" src="./images/Twitter_white.svg" />
+              <span>twitter.com/mitchmalinin</span>
+            </div>
+            </a>
+          </div>
+
+          <p class="credits">
+            Mitch Malinin Productions 2021 © <img src="./images/Logo.svg" />
+          </p>
+        </div>
+      </footer>
       <script src="script.js"></script>
     </div>
   </body>
