--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="shortcut icon" type="image/jpg" href="./images/Logo.svg" />
+    <meta property="og:image" content="./images/link_preview.png" />
+    <link rel="image_src" href="./images/link_preview.png" />
     <title>Mitchell Malinin</title>
   </head>
   <body>
@@ -335,28 +337,27 @@
 
         <div class="footer-content">
           <div class="link-wrapper">
-           
             <div class="link">
               <img class="social-icon" src="./images/Gmail_white.svg" />
               <span>mitchmalinin@gmail.com</span>
             </div>
             <a href="https://www.linkedin.com/in/mitchmalinin/" target="_blank">
-            <div class="link">
-              <img class="social-icon" src="./images/LinkedIN_white.svg" />
-              <span>linkedin.com/in/mitchmalinin/</span>
-            </div>
+              <div class="link">
+                <img class="social-icon" src="./images/LinkedIN_white.svg" />
+                <span>linkedin.com/in/mitchmalinin/</span>
+              </div>
             </a>
             <a href="https://github.com/mitchmalinin" target="_blank">
-            <div class="link">
-              <img class="social-icon" src="./images/Github_white.svg" />
-              <span>github.com/mitchmalinin</span>
-            </div>
+              <div class="link">
+                <img class="social-icon" src="./images/Github_white.svg" />
+                <span>github.com/mitchmalinin</span>
+              </div>
             </a>
             <a href="https://twitter.com/mitchmalinin" target="_blank">
-            <div class="link">
-              <img class="social-icon" src="./images/Twitter_white.svg" />
-              <span>twitter.com/mitchmalinin</span>
-            </div>
+              <div class="link">
+                <img class="social-icon" src="./images/Twitter_white.svg" />
+                <span>twitter.com/mitchmalinin</span>
+              </div>
             </a>
           </div>
 
