--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
         </div>
         <div class="about-content section-content">
           <p class="text">
-            My name is Mitch Malinin, and I am a web development bootcamp
-            graduate. I have strong interests in building complex user
+            Hey, my name is Mitch Malinin! I'm a graduate of Miami's Ironhack
+            Web Development Bootcamp, with a certification in Full Stack Web
+            Development. I like taking on new challenges and learning new
+            technologies. I have strong interests in building complex user
             interfaces, and learning about blockchain technology. I also posses
             a passion to develop innovative applications that will shape the
             future of society!
