--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
           <p class="text">
             Hey, my name is Mitch Malinin! I'm a graduate of Miami's Ironhack
             Web Development Bootcamp, with a certification in Full Stack Web
-            Development. I like taking on new challenges and learning new
+            Development. I like taking on new challenges, and trying new
             technologies. I have strong interests in building complex user
-            interfaces, and learning about blockchain technology. I also posses
-            a passion to develop innovative applications that will shape the
+            interfaces, and learning about blockchain tech. I also posses a
+            passion to develop innovative applications that will shape the
             future of society!
           </p>
           <img class="circle" src="./images/avatar.svg" alt="avatar" />
@@ -236,7 +236,7 @@
                 <span class="status">August 2019 - September 2019</span>
               </p>
               <div class="roles">
-                Roles: <span>designed and developed frontend/backend</span>
+                Roles: <span>designed & developed frontend/backend</span>
               </div>
               <div class="desc">
                 Project Pocket is a way to keep all your projects in your
@@ -276,7 +276,7 @@
                 <span class="status">July 2019 - August 2019</span>
               </p>
               <div class="roles">
-                Roles: <span>designed and developed frontend/backend</span>
+                Roles: <span>designed & developed frontend/backend</span>
               </div>
               <div class="desc">
                 I chose to redesign the bookmark manager. I wanted to create a
