--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         </div>
         <div class="about-content section-content">
           <p class="text">
-            Hey, my name is Mitch Malinin! I'm a graduate of Miami's Ironhack
-            Web Development Bootcamp, with a certification in Full Stack Web
-            Development. I like taking on new challenges, and trying new
-            technologies. I have strong interests in building complex user
-            interfaces, and learning about blockchain tech. I also posses a
-            passion to develop innovative applications that will shape the
-            future of society!
+            Hey! My names Mitch, and I'm a full stack developer who focus on
+            frontend. I'm a graduate of Miami's Ironhack Web Development
+            Bootcamp, with a certification in Full Stack Web Development. I like
+            taking on new challenges, and trying new technologies. I have strong
+            interests in building complex user interfaces, and learning about
+            blockchain tech. I also posses a passion to develop innovative
+            applications that will shape the future of society!
           </p>
           <img class="circle" src="./images/avatar.svg" alt="avatar" />
         </div>
@@ -318,7 +318,7 @@
                 <span class="status">June 2019 - June 2019</span>
               </p>
               <div class="roles">
-                Roles: <span>designed and developed</span>
+                Roles: <span>designed & developed frontend</span>
               </div>
               <div class="desc">
                 I wanted to build something unique, so I chose to create a game
