--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             Development Bootcamp, with a certification in Full Stack Web
             Development. I like taking on new challenges, and working with new
             technologies. I have experience in building complex user interfaces,
-            and a passion about learning blockchain technology. My goal is to
+            and a passion for learning blockchain technology. My goal is to
             develop innovative & aesthetic applications that will shape the
             future of society!
           </p>
@@ -123,7 +123,7 @@
         </div>
         <div class="skills-content section-content">
           <div class="skill-card">
-            <h5>React</h5>
+            <h5>React.js</h5>
             <div class="skill-card-icon-container React">
               <img src="./images/skills/react.svg" alt="skills-img" />
             </div>
@@ -461,6 +461,9 @@
           <p class="credits">
             Mitch Malinin Productions 2021 © <img src="./images/Logo.svg" />
           </p>
+          <img class="dots" src="images/dots.svg" alt="dots" />
+          <img class="circle" src="./images/circle.svg" alt="circle" />
+          <img class="tri" src="./images/triangle.svg" alt="triangle" />
         </div>
       </footer>
       <script src="script.js"></script>
