--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             Mitch Malinin Productions 2021 © <img src="./images/Logo.svg" />
           </p>
           <img class="dots" src="images/dots.svg" alt="dots" />
-          <img class="circle" src="./images/circle.svg" alt="circle" />
+          <!-- <img class="circle" src="./images/circle.svg" alt="circle" /> -->
           <img class="tri" src="./images/triangle.svg" alt="triangle" />
         </div>
       </footer>
