--- a/index.html
+++ b/index.html
@@ -76,32 +76,37 @@
           </div>
           <div class="social-wrapper">
             <a href="https://github.com/mitchmalinin" target="_blank"
-              ><img class="social-icon" src="./images/Github_white.svg"
+              ><img
+                class="social-icon stagger2"
+                src="./images/Github_white.svg"
             /></a>
             <a href="https://www.linkedin.com/in/mitchmalinin/" target="_blank"
-              ><img class="social-icon" src="./images/LinkedIN_white.svg"
+              ><img
+                class="social-icon stagger2"
+                src="./images/LinkedIN_white.svg"
             /></a>
             <a href="https://twitter.com/mitchmalinin" target="_blank"
-              ><img class="social-icon" src="./images/Twitter_white.svg"
+              ><img
+                class="social-icon stagger2"
+                src="./images/Twitter_white.svg"
             /></a>
           </div>
         </div>
         <img class="circle-bg" src="./images/circle.svg" />
-        <img class="circle-sm" src="./images/circle.svg" />
-        <img class="circle-sm" src="./images/circle.svg" />
-        <img class="triangle-sm" src="./images/triangle.svg" />
+        <img class="circle-sm stagger1" src="./images/circle.svg" />
+        <img class="triangle-sm stagger1" src="./images/triangle.svg" />
         <img class="dots-left" src="./images/dots.svg" />
         <img class="dots-right" src="./images/dots.svg" />
-        <img class="square-sm" src="./images/square.svg" />
+        <img class="square-sm stagger1" src="./images/square.svg" />
         <img class="square-bg" src="./images/square.svg" />
       </section>
       <section id="about" class="section-spacing about">
         <div class="section-heading">
-          <h1>About</h1>
-          <h6>Myself</h6>
+          <h2 class="transition2">About</h2>
+          <h6 class="transition2">Myself</h6>
         </div>
         <div class="about-content section-content">
-          <p class="text">
+          <p class="text left">
             Hey! My name is Mitch, and I'm a full stack developer who
             specializes in frontend. I'm a graduate of Miami's Ironhack Web
             Development Bootcamp, with a certification in Full Stack Web
@@ -111,44 +116,48 @@
             develop innovative & aesthetic applications that will shape the
             future of society!
           </p>
-          <img class="circle" src="./images/avatar.svg" alt="avatar" />
+          <img
+            class="circle transition9"
+            src="./images/avatar.svg"
+            alt="avatar"
+          />
         </div>
       </section>
       <section id="skills" class="section-spacing skills">
         <img class="skills-dots" src="./images/dots.svg" />
         <img class="skills-dots" src="./images/dots.svg" />
         <div class="section-heading">
-          <h1>My</h1>
-          <h6 class="skills-title">Skills</h6>
+          <h2 class="transition3">My</h2>
+          <h6 class="skills-title transition3">Skills</h6>
         </div>
         <div class="skills-content section-content">
-          <div class="skill-card">
+          <div class="skill-card transition7">
             <h5>React.js</h5>
             <div class="skill-card-icon-container React">
               <img src="./images/skills/react.svg" alt="skills-img" />
             </div>
           </div>
-          <div class="skill-card">
+          <div class="skill-card transition7">
             <h5>JavaScript</h5>
             <div class="skill-card-icon-container JavaScript">
               <img src="./images/skills/js.svg" alt="skills-img" />
             </div>
           </div>
-          <div class="skill-card">
+          <div class="skill-card transition7">
             <h5>Node.js</h5>
             <div class="skill-card-icon-container Node">
               <img src="./images/skills/node.svg" alt="skills-img" />
             </div>
           </div>
-          <div class="skill-card">
+          <div class="skill-card transition7">
             <h5>MongoDB</h5>
-            <div class="skill-card-icon-container MongoDB">
+            <div class="skill-card-icon-container transition7 MongoDB">
               <img src="./images/skills/mongo.svg" alt="skills-img" />
             </div>
           </div>
-          <div class="skill-card">
+          <div class="skill-card transition7">
             <h5>HTML</h5>
-            <div class="skill-card-icon-container html">
+            <div class="skill-card-icon-container transition7 html">
               <img
                 class="smaller-img"
                 src="./images/skills/html.svg"
@@ -156,9 +165,9 @@
               />
             </div>
           </div>
-          <div class="skill-card">
+          <div class="skill-card transition7">
             <h5>CSS</h5>
-            <div class="skill-card-icon-container">
+            <div class="skill-card-icon-container transition7">
               <img
                 class="smaller-img"
                 src="./images/skills/css.svg"
@@ -166,9 +175,9 @@
               />
             </div>
           </div>
-          <div class="skill-card">
+          <div class="skill-card transition7">
             <h5>Figma</h5>
-            <div class="skill-card-icon-container">
+            <div class="skill-card-icon-container transition7">
               <img
                 class="figma-img"
                 src="./images/skills/figma.svg"
@@ -176,7 +185,7 @@
               />
             </div>
           </div>
-          <div class="skill-card">
+          <div class="skill-card transition7">
             <h5>Coffee Drinking</h5>
             <div class="skill-card-icon-container">
               <img src="./images/skills/coffee.svg" alt="skills-img" />
@@ -187,11 +196,11 @@
 
       <section id="projects" class="section-spacing">
         <div class="section-heading">
-          <h1>My</h1>
-          <h6>Projects</h6>
+          <h2 class="transition4">My</h2>
+          <h6 class="transition4">Projects</h6>
         </div>
         <div class="project-content">
-          <div class="project-item-wrapper">
+          <div class="project-item-wrapper transition6">
             <div class="project-card-img-section">
               <img src="./images/project_screenshots/Hedge.png" alt="" />
               <div class="project-hidden-links">
@@ -223,7 +232,7 @@
               </div>
             </div>
           </div>
-          <div class="project-item-wrapper">
+          <div class="project-item-wrapper transition6">
             <div class="project-card-img-section">
               <img src="./images/project_screenshots/quarantini.png" alt="" />
               <div class="project-hidden-links">
@@ -262,7 +271,7 @@
               </div>
             </div>
           </div>
-          <div class="project-item-wrapper">
+          <div class="project-item-wrapper transition6">
             <div class="project-card-img-section">
               <img
                 src="./images/project_screenshots/projectpocket.png"
@@ -315,7 +324,7 @@
               </div>
             </div>
           </div>
-          <div class="project-item-wrapper">
+          <div class="project-item-wrapper transition6">
             <div class="project-card-img-section">
               <img src="./images/project_screenshots/blackjack.png" alt="" />
               <div class="project-hidden-links">
@@ -372,7 +381,7 @@
               </div>
             </div>
           </div>
-          <div class="project-item-wrapper">
+          <div class="project-item-wrapper transition6">
             <div class="project-card-img-section">
               <img src="./images/project_screenshots/link-saver.png" alt="" />
               <div class="project-hidden-links">
@@ -428,12 +437,12 @@
       </section>
       <footer id="contact">
         <div class="section-heading">
-          <h1>Contact</h1>
-          <h6>me</h6>
+          <h2 class="transition5">Contact</h2>
+          <h6 class="transition5">me</h6>
         </div>
 
         <div class="footer-content">
-          <div class="link-wrapper">
+          <div class="link-wrapper transition8">
             <div class="link">
               <img class="social-icon" src="./images/Gmail_white.svg" />
               <span>mitchmalinin@gmail.com</span>
@@ -461,11 +470,25 @@
           <p class="credits">
             Mitch Malinin Productions 2021 © <img src="./images/Logo.svg" />
           </p>
-          <img class="dots" src="images/dots.svg" alt="dots" />
-          <!-- <img class="circle" src="./images/circle.svg" alt="circle" /> -->
-          <img class="tri" src="./images/triangle.svg" alt="triangle" />
+          <img class="dots transition8" src="images/dots.svg" alt="dots" />
+          <img
+            class="tri transition8"
+            src="./images/triangle.svg"
+            alt="triangle"
+          />
         </div>
       </footer>
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
+        integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"
+        integrity="sha512-Q+G390ZU2qKo+e4q+kVcJknwfGjKJOdyu5mVMcR95NqL6XaF4lY4nsSvIVB3NDP54ACsS9rqhE1DVqgpApl//Q=="
+        crossorigin="anonymous"
+      ></script>
+
       <script src="script.js"></script>
     </div>
   </body>
