--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <h6 class="transition4">Projects</h6>
         </div>
         <div class="project-content">
-          <div class="project-item-wrapper transition6">
+          <div class="project-item-wrapper showProject">
             <div class="project-card-img-section">
               <img src="./images/project_screenshots/Hedge.png" alt="" />
               <div class="project-hidden-links">
@@ -232,7 +232,7 @@
               </div>
             </div>
           </div>
-          <div class="project-item-wrapper transition6">
+          <div class="project-item-wrapper showProject">
             <div class="project-card-img-section">
               <img src="./images/project_screenshots/quarantini.png" alt="" />
               <div class="project-hidden-links">
@@ -271,7 +271,7 @@
               </div>
             </div>
           </div>
-          <div class="project-item-wrapper transition6">
+          <div class="project-item-wrapper showProject">
             <div class="project-card-img-section">
               <img
                 src="./images/project_screenshots/projectpocket.png"
@@ -324,7 +324,7 @@
               </div>
             </div>
           </div>
-          <div class="project-item-wrapper transition6">
+          <div class="project-item-wrapper showProject">
             <div class="project-card-img-section">
               <img src="./images/project_screenshots/blackjack.png" alt="" />
               <div class="project-hidden-links">
@@ -381,7 +381,7 @@
               </div>
             </div>
           </div>
-          <div class="project-item-wrapper transition6">
+          <div class="project-item-wrapper showProject">
             <div class="project-card-img-section">
               <img src="./images/project_screenshots/link-saver.png" alt="" />
               <div class="project-hidden-links">
