--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
           </div>
 
           <p class="credits">
-            Mitch Malinin Productions 2021 © <img src="./images/Logo.svg" />
+            Mitch Malinin 2021 © <img src="./images/Logo.svg" />
           </p>
           <img class="dots transition8" src="images/dots.svg" alt="dots" />
           <img
