--- a/index.html
+++ b/index.html
@@ -465,11 +465,29 @@
                 <span>twitter.com/mitchmalinin</span>
               </div>
             </a>
+            <!-- <a href="./Mitchell Malinin.pdf" download="Mitch Malinin">
+              <div class="link">
+                <i class="fas fa-file fa-1x"></i>
+                <span>Download Resume</span>
+              </div>
+            </a> -->
           </div>
 
-          <p class="credits">
-            Mitch Malinin 2021 © <img src="./images/Logo.svg" />
-          </p>
+          <div class="credits">
+            <span>Mitch Malinin 2021 ©</span>
+            <a
+              class="resume"
+              href="./Mitchell Malinin.pdf"
+              download="Mitch Malinin"
+            >
+              <div class="link">
+                <i class="fas fa-file"></i>
+                <span>Download Resume</span>
+              </div>
+            </a>
+            <img src="./images/Logo.svg" />
+          </div>
+
           <img class="dots transition8" src="images/dots.svg" alt="dots" />
           <img
             class="tri transition8"
@@ -478,6 +496,11 @@
           />
         </div>
       </footer>
+      <script
+        src="https://kit.fontawesome.com/a561988c34.js"
+        crossorigin="anonymous"
+      ></script>
+
       <script
         src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
         integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
