smooth scroll fix

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
         <img class="square-sm stagger1" src="./images/square.svg" />
         <img class="square-bg" src="./images/square.svg" />
       </section>
-      <section id="about" class="section-spacing about">
+      <section class="section-spacing about">
+        <div id="about" class="fake-anchor"></div>
         <div class="section-heading">
           <h2 class="transition2">About</h2>
           <h6 class="transition2">Myself</h6>
@@ -123,7 +124,8 @@
           />
         </div>
       </section>
-      <section id="skills" class="section-spacing skills">
+      <section class="section-spacing skills">
+        <div id="skills" class="fake-anchor"></div>
         <img class="skills-dots" src="./images/dots.svg" />
         <img class="skills-dots" src="./images/dots.svg" />
         <div class="section-heading">
@@ -194,7 +196,8 @@
         </div>
       </section>
 
-      <section id="projects" class="section-spacing">
+      <section class="section-spacing">
+        <div id="projects" class="fake-anchor"></div>
         <div class="section-heading">
           <h2 class="transition4">My</h2>
           <h6 class="transition4">Projects</h6>
