--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
             <div class="bar" id="bar3"></div>
           </div>
           <ul class="nav">
-            <a href="#about"><li class="nav-item">About</li></a>
-            <a href="#projects"><li class="nav-item">Projects</li></a>
-            <a href="#contact"><li class="nav-item">Contact</li></a>
+            <a class="click" href="#about"><li class="nav-item">About</li></a>
+            <a class="click" href="#projects"
+              ><li class="nav-item">Projects</li></a
+            >
+            <a class="click" href="#contact"
+              ><li class="nav-item">Contact</li></a
+            >
             <a
               href="https://drive.google.com/file/d/1uG2A76dIdHxJlchTDTEm6mpR1zXJFtsM/view?usp=sharing"
               target="_blank"
