--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
         <div class="about-content section-content">
           <p class="text left">
             Hey! My name is Mitch, and I'm a full stack developer who
-            specializes in frontend. I'm a Penn State graduate with a bachelor's
-            in Cyber Security focused in Design & Development. I'm also a
-            graduate of Miami's Ironhack Web Development Bootcamp, with a
-            certification in Full Stack Web Development. I like taking on new
-            challenges, and working with new technologies. I have experience in
-            building complex user interfaces, and a passion for learning
-            blockchain technology. My goal is to develop innovative & aesthetic
-            applications that will shape the future of society!
+            specializes in frontend. I'm a Penn State graduate with a Bachelor's
+            degree in Cyber Security. I'm also a graduate of Miami's Ironhack
+            Web Development Bootcamp, with a certification in Full Stack Web
+            Development. I like taking on new challenges, and working with new
+            technologies. I have experience in building complex user interfaces,
+            and a passion for learning blockchain technology. My goal is to
+            develop innovative & aesthetic applications that will shape the
+            future of society!
           </p>
           <img
             class="circle transition9"
