--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
           <p class="text left">
             Hey! My name is Mitch, and I'm a full stack developer who
             specializes in frontend. I'm a Penn State graduate with a Bachelor's
-            degree in Cyber Security. I'm also a graduate of Miami's Ironhack
-            Web Development Bootcamp, with a certification in Full Stack Web
+            degree in Cyber Security. I'm also a Miami Ironhack Web Development
+            Bootcamp graduate, with a certification in Full Stack Web
             Development. I like taking on new challenges, and working with new
             technologies. I have experience in building complex user interfaces,
             and a passion for learning blockchain technology. My goal is to
