--- a/index.html
+++ b/index.html
@@ -112,15 +112,14 @@
         </div>
         <div class="about-content section-content">
           <p class="text left">
-            Hey! My name is Mitch, and I'm a full stack developer who
+            Hey! My name is Mitch, and I'm a full stack web developer who
             specializes in frontend. I'm a Penn State graduate with a Bachelor's
-            degree in Cyber Security. I'm also a Miami Ironhack Web Development
-            Bootcamp graduate, with a certification in Full Stack Web
-            Development. I like taking on new challenges, and working with new
-            technologies. I have experience in building complex user interfaces,
-            and a passion for learning blockchain technology. My goal is to
-            develop innovative & aesthetic applications that will shape the
-            future of society!
+            degree in Cyber Security. I'm also a Ironhack Miami Bootcamp
+            graduate, with a certification in Full Stack Web Development. I like
+            taking on new challenges, and working with new technologies. I have
+            experience in building complex user interfaces, and a passion for
+            learning blockchain technology. My goal is to develop innovative &
+            aesthetic applications that will shape the future of society!
           </p>
           <img
             class="circle transition9"
