--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               </div>
               <div class="desc">
                 <span class="overview">Overview: </span>
-                My job was to recreate the Hedge iOS app in a web app format.
+                My task was to recreate the Hedge iOS app in a web app format.
                 Hedge is a fantasy sports platform that allows you to use your
                 spare change in daily fantasy contests where you can yield
                 higher returns. Buy a coffee for $2.50? Use that rounded up
