--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </div>
           </div>
           <div class="skill-card transition7">
-            <h5>Coffee Drinking</h5>
+            <h5>Drinking Coffee</h5>
             <div class="skill-card-icon-container">
               <img src="./images/skills/coffee.svg" alt="skills-img" />
             </div>
