--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <div class="hero-content-wrapper">
           <img class="logo-bg" src="./images/Logo.svg" />
           <div class="name-wrapper">
-            <h1 class="name">Mitch Malinin</h1>
-            <h3 class="title">Fullstack Developer</h3>
+            <h1 class="name name-stg">Mitch Malinin</h1>
+            <h3 class="title name-stg">Fullstack Developer</h3>
           </div>
           <div class="social-wrapper">
             <a href="https://github.com/mitchmalinin" target="_blank"
