--- a/index.html
+++ b/index.html
@@ -313,17 +313,18 @@
                 <span class="status">August 2019 - September 2019</span>
               </p>
               <div class="roles">
-                Roles: <span>designed & developed frontend and backend</span>
+                Roles: <span>designed & developed frontend</span>
               </div>
               <div class="desc">
                 <span class="overview">Overview: </span>
-                I always struggled with project management and organization, so
-                I wanted to build a tool to help me with that. Project Pocket is
-                a way to keep all your projects in your pocket! This app helps
-                users keep a virtual portfolio of all their personal projects.
-                This app also helps users with project management. When creating
-                a new project, users are given a calender view to keep track of
-                their different daily project tasks.
+                My friend and I struggled with project management and
+                organization, so we wanted to build a tool to help us with that.
+                Project Pocket is a way to keep all your projects in your
+                pocket! This app helps users keep a virtual portfolio of all
+                their personal projects. This app also helps users with project
+                management. When creating a new project, users are given a
+                calender view to keep track of their different daily project
+                tasks.
               </div>
               <div class="tech-stack">
                 <p>Frontend Stack: <span>React.js</span></p>
