--- a/index.html
+++ b/index.html
@@ -317,13 +317,13 @@
               </div>
               <div class="desc">
                 <span class="overview">Overview: </span>
-                My friend and I struggled with project management and
-                organization, so we wanted to build a tool to help us with that.
-                Project Pocket is a way to keep all your projects in your
-                pocket! This app helps users keep a virtual portfolio of all
-                their personal projects. This app also helps users with project
-                management. When creating a new project, users are given a
-                calender view to keep track of their different daily project
+                My friend and I always struggled with project
+                management/organization, so we wanted to build a tool to help us
+                with that. Project Pocket is a way to keep all your projects in
+                your pocket! This app helps users keep a virtual portfolio of
+                all their personal projects. This app also helps users with
+                project management. When creating a new project, users are given
+                a calender view to keep track of their different daily project
                 tasks.
               </div>
               <div class="tech-stack">
