--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
               </div>
               <div class="tech-stack">
                 <p>Frontend Stack: <span>React & Styled-Components</span></p>
+                <p>Backend Stack: <span>Node.js, PHP, MySQL, MongoDB</span></p>
               </div>
             </div>
           </div>
