--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
             <a class="click" href="#contact"
               ><li class="nav-item">Contact</li></a
             >
-            <a
-              href="https://drive.google.com/file/d/1uG2A76dIdHxJlchTDTEm6mpR1zXJFtsM/view?usp=sharing"
-              target="_blank"
+            <a href="Mitchell Malinin.pdf" target="_blank"
               ><li class="nav-item">Resume</li></a
             >
           </ul>
