--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
             </div>
           </div>
           <div class="skill-card transition7">
-            <h5>Drinking Coffee</h5>
+            <h5>Github</h5>
             <div class="skill-card-icon-container">
-              <img src="./images/skills/coffee.svg" alt="skills-img" />
+              <img src="./images/skills/github.svg" alt="skills-img" />
             </div>
           </div>
         </div>
