--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <div class="skill-card transition7">
             <h5>Github</h5>
             <div class="skill-card-icon-container">
-              <img src="./images/skills/github.svg" alt="skills-img" />
+              <img src="./images/skills/github.png" alt="skills-img" />
             </div>
           </div>
         </div>
