--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <img class="logo-bg" src="./images/Logo.svg" />
           <div class="name-wrapper">
             <h1 class="name name-stg">Mitch Malinin</h1>
-            <h3 class="title name-stg">Fullstack Developer</h3>
+            <h3 class="title name-stg">Frontend Developer</h3>
           </div>
           <div class="social-wrapper">
             <a href="https://github.com/mitchmalinin" target="_blank"
