--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
         </div>
         <div class="about-content section-content">
           <p class="text left">
-            Hey! My name is Mitch, and I'm a full stack web developer who
-            specializes in frontend. I'm a Penn State graduate with a Bachelor's
-            degree in Cyber Security. I'm also a Ironhack Miami Bootcamp
-            graduate, with a certification in Full Stack Web Development. I like
-            taking on new challenges, and working with new technologies. I have
-            experience in building complex user interfaces, and a passion for
-            learning blockchain technology. My goal is to develop innovative &
-            aesthetic applications that will shape the future of society!
+            Hey! My name is Mitch, and I'm a frontend web developer. I'm a Penn
+            State graduate with a Bachelor's degree in Cyber Security, and I'm
+            also a Ironhack Miami Bootcamp graduate with a certification in Full
+            Stack Web Development. I like taking on new challenges, and working
+            with new technologies. I have experience in building complex user
+            interfaces, and a passion for learning blockchain technology. My
+            goal is to develop innovative & aesthetic applications that will
+            shape the future of society!
           </p>
           <img
             class="circle transition9"
