twitter link changed

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 class="social-icon stagger2"
                 src="./images/LinkedIN_white.svg"
             /></a>
-            <a href="https://twitter.com/mitchmalinin" target="_blank"
+            <a href="https://twitter.com/0xmrwzrd" target="_blank"
               ><img
                 class="social-icon stagger2"
                 src="./images/Twitter_white.svg"
