--- a/index.html
+++ b/index.html
@@ -482,10 +482,10 @@
                 <span>github.com/mitchmalinin</span>
               </div>
             </a>
-            <a href="https://twitter.com/mitchmalinin" target="_blank">
+            <a href="https://twitter.com/0xmrwzrd" target="_blank">
               <div class="link">
                 <img class="social-icon" src="./images/Twitter_white.svg" />
-                <span>twitter.com/mitchmalinin</span>
+                <span>twitter.com/0xMrWzrd</span>
               </div>
             </a>
             <!-- <a href="./Mitchell Malinin.pdf" download="Mitch Malinin">
