--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
             State graduate with a Bachelor's degree in Cyber Security, and I'm
             also a Ironhack Miami Bootcamp graduate with a certification in Full
             Stack Web Development. I like taking on new challenges, and working
-            with new technologies. I have experience in building complex user
-            interfaces, and a massive passion for all things related to
-            blockchain technologies. My goal is to develop innovative &
-            aesthetic applications that will shape the future of society!
+            with new technologies. I have experience in building complex React
+            user interfaces, and a massive passion for all things related to
+            blockchain technology. My goal is to develop innovative & aesthetic
+            applications that will shape the future of society!
           </p>
           <img
             class="circle transition9"
